@@ -1,1 +1,2 @@
 .merlin
+.gitignore
