@@ -1,2 +1,3 @@
 tests
 .merlin
+.gitignore
